--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+* {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
 html,
 button,
 input,
@@ -44,56 +50,130 @@ textarea {
     resize: vertical;
 }
 
-.chromeframe {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+a {
+    color: #0066bb;
+    text-decoration: none;
 }
 
-
-/*
- * Helper classes
- */
-
-.hidden {
-    display: none !important;
-    visibility: hidden;
+a:hover {
+    text-decoration: underline;
 }
 
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
+body {
+    font: 16px/26px Open Sans, Helvetica, Helvetica Neue, Arial;
+    color: rgb(40, 40, 20);
+    background: white;
+}
+
+section {
     position: absolute;
-    width: 1px;
+    top: 50%;
+    left: 50%;
+    padding-bottom: 100px;
+    -webkit-transform: translate(-50%, -50%);
+       -moz-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    z-index: 10;
 }
 
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
+section p {
+    display: block;
+    margin: 12px auto;
+    max-width: 270pt;
+    text-align: center;
+}
+
+.avatar {
+    display: block;
+    margin: 0 auto;
+
+    background: url(../images/avatar-400.jpg) no-repeat;
+    background-size: 100px 100px;
+    background-position: center; 
+
+    -webkit-border-radius: 50%;
+       -moz-border-radius: 50%;
+            border-radius: 50%;
+
+    height: 100px;
+    width: 100px;
+    margin: 20pt auto;
+}
+
+.github-icon {
+    background: url(../images/github-128.png) no-repeat;
+    background-size: 48px 48px;
+    background-position: center; 
+}
+
+.google-plus-icon {
+    background: url(../images/google-plus-128.png) no-repeat;
+    background-size: 48px 48px;
+    background-position: center; 
+}
+
+.imdb-icon {
+    background: url(../images/imdb-96.png) no-repeat;
+    background-size: 48px 48px;
+    background-position: center; 
+}
+
+.links {
+    display: block;
     margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
+    padding: 0;
+
+    position: absolute;
+    left: 50%;
+    bottom: 10%;
+    -webkit-transform: translate(-50%, 0);
+       -moz-transform: translate(-50%, 0);
+        -ms-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
+    z-index: 0;
+
+    list-style: none;
+    text-align: center;
+    white-space: nowrap;
 }
 
-.invisible {
-    visibility: hidden;
+.links li {
+    display: inline-block;
 }
 
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
+.links a {
+    display: block;
+    width: 80px;
+    height: 58px;
+    margin: 0px;
 }
 
-.clearfix:after {
-    clear: both;
+.links a,
+.links a:hover,
+.links a:visited {
+    text-decoration: none;
+}
+
+.links a {
+    opacity: 0.2;
+    /*
+    -webkit-filter: blur(1px);
+            filter: blur(1px);
+     */
+    -webkit-transition: opacity 0.2s ease-out;
+       -moz-transition: opacity 0.2s ease-out;
+        -ms-transition: opacity 0.2s ease-out;
+         -o-transition: opacity 0.2s ease-out;
+            transition: opacity 0.2s ease-out;
+}
+
+.links a:hover {
+    opacity: 0.8;
+    /*
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+     */
 }
 
 
